--- a/web/index.html
+++ b/web/index.html
@@ -45,9 +45,9 @@
                   <div class="p-5 text-center">
                     <h1 class="display-5 fw-bold">Arko Lab</h1>
                     <small class="col-md-8 fs-4">Criação de software personalizado que atendam as necessidades do seu
-                      negocio. Transformamos suas ideias em realidade digital.</small>
+                      negocio. Transformamos suas ideias em realidade digital. fale já com o nosso representante. [Abel Dos S. S. José]</small>
                     <div class="row row-cols-auto gap-2 justify-content-center mt-2">
-                      <button type="button" class="btn btn-primary">Fale Connosco</button>
+                      <a  class="btn btn-primary" href="https://wa.me/244928855854">Contactar</a>
                     </div>
                   </div>
                 </div>
@@ -102,7 +102,7 @@
                   </a>
                 </li> -->
                 <li class="ms-4">
-                  <a class="text-body-secondary" href="#">
+                  <a class="text-body-secondary" href="https://wa.me/244928855854">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor"
                       class="bi bi-whatsapp" viewBox="0 0 16 16">
                       <path
